2010-04-02 Ian Rutt
 * libglide/glide_thck.F90: part-refactored thck_nonlin_evolve
 * libglide/glide_velo.F90: removed slipvelo and zerovelo (redundant)

2010-04-01 Ian Rutt
 * libglide/glide_thck.F90: reformatted generate_row
 * libglide/glide_thck.F90: refactor thck_evolve
 * libglide/glide_thck.F90: linear solve now uses same subroutine as non-linear. 
   Code still needs renaming and reorganising, though.

2010-03-29 Magnus Hagdorn
 * libglide/glide.F90: use new API
 * libglide/glide_velo.F90: refactor calcVerticalVelocity

2010-03-29 Ian Rutt
 * libglide/glide_thck.F90, libglimmer/glimmer_slap.F90: Fixed memory leak
   from slap wrapper.

2010-03-26 Ian Rutt
 * libglide/glide_thck.F90: refactored findsums (taken outside thck_evolve)
 * libglide/glide_thck.F90: formatting changes
 * libglide/glide_thck.F90: initial refactoring of generate_row
	
2010-03-24 Magnus Hagdorn
 * libglide/glide_velo.F90: refactored chckwvel

2010-03-24 Magnus Hagdorn
 * libglide/glide.F90: use new API
 * libglide/glide_velo.F90: refactor calc_btrc

2010-03-24 Magnus Hagdorn
 * libglide/glide.F90: use new API
 * libglide/glide_velo.F90: refactor wvel_ew and calc_basal_shear

2010-02-24 Magnus Hagdorn
 * libglide/glide_velo.F90: refactor wvelintg

2010-02-24 Magnus Hagdorn
 * libglide/glide_velo.F90: refactor zerovelo and gridwvel
 
2010-02-19 Magnus Hagdorn
 * libglide/glide_thck.F90: use new dummy params for slipvelo
 * libglide/glide_types.F90: move dthckdtm and dusrfdtm to velo_type
 * libglide/glide_vars.def: new location for dusrfdtm
 * libglide/glide_velo.F90: refactor slipvelo, first go at refactoring
   gridwvel and chckwvel
 * libglide/velo_types.F90: add ice_grid coord system, add dthckdtm and 
   dusrfdtm

2010-02-17 Magnus Hagdorn
 * libglide/Makefile.am: add convinience library for velocity computations
 * libglide/glide.F90: new API for init_velo; call flow law initialisation
   procedure directly
 * libglide/glide_setup.F90: allocate memory for sigma coords here